[package]
name = "did-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { version = "0.5.0-dev.3", git = "https://github.com/iotaledger/identity.rs", features = ["account"] }
pretty_env_logger = { version = "0.4" }
rand = { version = "0.8" }
tokio = { version = "1.10", features = ["full"] }
